Tests/CompilerTests/negative/cyclic-binding.hylo
fun main() {
  let y = y
}
