Tests/CompilerTests/negative/cyclic-binding.expected
negative/cyclic-binding.hylo:2.7-8: error: declaration refers to itself
  let y = y
      ^
